# rexec

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  \\?\D:\a\rexec\rexec\src\main.rs
.github/workflows/: arch_pkg.yaml  arm_build.yml  build.yml  release.yml  rust.yml  update_repo.yml
src/: main.rs
