[package]
name = "rexec"
version = "1.0.9"
readme = "https://github.com/house-of-vanity/rexec#readme"
edition = "2021"
description = "Parallel SSH executor"
repository = "https://github.com/house-of-vanity/rexec"
homepage = "https://github.com/house-of-vanity/rexec"
license = "WTFPL"
categories = ["command-line-utilities"]
authors = ["AB <gh@hexor.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.2"
log = "0.4.0"
env_logger = "0.10.0"
massh = "0.6.3"
whoami = "1.4.0"
lazy-st = "0.2.2"
regex = "1"
clap = { version = "4.3.4", features = ["derive"] }
colored = "2.0.0"
#dialoguer = "0.10.4"
itertools = "0.10.5"
brace-expand = "0.1.0"
question = "0.2.2"
openssl = { version = "0.10", features = ["vendored"] }
