[package]
name = "rexec"
version = "1.5.0"
readme = "https://github.com/house-of-vanity/rexec#readme"
edition = "2021"
description = "Parallel SSH executor"
repository = "https://github.com/house-of-vanity/rexec"
homepage = "https://github.com/house-of-vanity/rexec"
license = "WTFPL"
categories = ["command-line-utilities"]
authors = ["AB <gh@hexor.ru>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
whoami = "1"
lazy-st = "1"
regex = "1"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
itertools = "0.14"
brace-expand = "0.1.0"
question = "0.2.2"
lazy_static = "1.5.0"
